# HttpTimeSync4cpp

./: .gitignore  .gitmodules  LICENSE  README.md
example/: CMakeLists.txt  Example.cpp
src/: CMakeLists.txt  HttpTimeSync.cpp  HttpTimeSync.h
